072: Modifications to codehilite.css to solve contrast problems in inline code, adding arduino folder

--- a/docs/stylesheets/codehilite.css
+++ b/docs/stylesheets/codehilite.css
@@ -5,14 +5,12 @@
 */
 
 .md-typeset code {
-  color: black !important
+  color: #ae81ff !important;
+  background-color: #313131 !important;
+  box-shadow: 0.29412em 0 0 rgba(0,0,0,.07), -0.29412em 0 0 rgba(0,0,0,.07);
 }
 
-/*
-/////////////////
-// Code Blocks //
-/////////////////
-*/
+
 
 /*
 line number
